# NewAvanues

./: .gitignore  .logging-allowlist  .warp.md  BUGFIX-DOWNLOADS-ENCRYPTION-51212.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RECOVERY_ROADMAP.md  SECURITY.md  build.gradle.kts  decisions.md  gradle.properties  import_cleanup_tool.kt  settings.gradle.kts  test_runner.sh
.claude/: AGENTS.md  CLAUDE.md  CLAUDE.md~HEAD  mcp.idc  mcp.json.bak  post-write-analyze.sh  pre-compact.sh  settings.idc  settings.json  settings.json.bak.20251211-032715  settings.json.bak2.20251211-033658  settings.json.v85backup  start-ideacode-api.sh  startup-banner [conflicted].sh  startup-banner.sh  statusline-command.sh  statusline-command.sh.old.20251211  update-usage-cache.sh
.codeavenue/: session-preferences.json
.ideacode/: MASTER-INDEX.md  config.idc  config.ideacode  config.yml
Demo/: overlay-multilang-icons.html  overlay-scope-options.html  voice-first-ui-shells.html
Docs/: CLAUDE-CONFIG-MATRIX.md  Cockpit-Testing-Guide-51210-V1.md  Cockpit-Window-Controls-Spec-51210-V1.md  NewAvanues-Monorepo-KMP-Structure-Guide-251223-V1.md  VoiceOS-Build-Errors-251223-V1.md  WORKTREES.md
Modules/SpeechRecognition/src/main.old-android-only/cpp/: CMakeLists.txt
app/: build.gradle.kts
backend/: README.md
contextsave/: QUICK-START-NEXT-AGENT.md  QUICK-START-TASK-3.md  QUICK-START-TASK-4.md  VoiceOS-Handover-P1-Analysis-Fixes-51213.md  VoiceOS-Handover-P1-Cleanup-51213.md  VoiceOS-Handover-P2-Tasks-51213.md  VoiceOS-Implementation-Complete-51214-V1.md  WebAvanue-Final-Implementation-Summary-51212-V1.md  WebAvanue-Final-Implementation-Summary-51212-V2.md  WebAvanue-Handover-Phase-C-Complete-51213-V1.md  WebAvanue-Implementation-Progress-51212-V1.md  WebAvanue-Integration-Tests-51213-V1.md  WebAvanue-Phase-C-Implementation-Summary-51213-V1.md  WebAvanue-Phase1-Downloads-Implementation-51212-V1.md  WebAvanue-Settings-Analysis-51213-V1.md  con-voiceos-llm-database-integration-20251226.md  con-voiceos-nlu-merge-20251207.md  (+49 more)
(+17366 files in other folders)
